# navien-nwp500-python

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTROL_IMPLEMENTATION_SUMMARY.md  FIND_PACKAGE_NAME.md  FORMATTING_REQUIREMENTS.md  GITHUB_ACTIONS_FIX.md  LICENSE  MAJOR_TEST_REFACTOR_NEEDED.md  MANIFEST.in  MQTT5_IMPLEMENTATION.md  MQTT5_IMPLEMENTATION_SUMMARY.md  Makefile  PACKAGE_NAME_SOLUTION.md  PRODUCTION_REFACTOR_SUMMARY.md  PYPI_SETUP_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  TEMPERATURE_DISCOVERY.md  TEST_FIXES_SUMMARY.md  WHO_WAS_RIGHT_ANALYSIS.md  debug_aws_creds.py  debug_websocket.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_auth.py  test_basic_auth.py  test_immediate_mqtt.py  test_mqtt.py
.github/: copilot-instructions.md  copilot-instructions.md.backup
.github/workflows/: publish.yml  release.yml  test.yml
docs/: CONTROL_IMPLEMENTATION_SUMMARY.md  CTRL_C_ANALYSIS.md  CTRL_C_INVESTIGATION.md  DEVICE_DATA_SCHEMA.md  ENERGY_CAPACITY_UPDATE.md  FIELD_INSIGHTS.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_REFACTOR_SUMMARY.md  README.md  TEMPERATURE_ANALYSIS.md  TEMPERATURE_CALIBRATION.md  TEMPERATURE_CALIBRATION_CHANGELOG.md  VERSION_MANAGEMENT.md
examples/: README.md  basic_usage.py  device_control_demo.py  dhw_charge_data.csv  dhw_charge_logger.py  dhw_charge_logger_robust.py  dhw_data_plotter.py  ha_compat_demo.py  ha_streaming_example.py  production_example.py  real_time_monitoring.py  requirements-plotting.txt  tank_monitoring_enhanced.py  tank_monitoring_hybrid.py  tank_monitoring_production.py  temperature_analysis_demo.py  temperature_calibration_demo.py  test_control_quick.py
navien_nwp500/: __init__.py  _version.py  auth.py  aws_iot_websocket.py  client.py  config.py  device.py  exceptions.py  ha_compat.py  models.py  mqtt.py  utils.py
navilink/: __init__.py  __main__.py  auth.py  aws_iot_websocket.py  client.py  config.py  device.py  exceptions.py  models.py  mqtt.py  mqtt_enhanced.py  mqtt_old.py  mqtt_protocol.py  utils.py
scripts/: bump_version.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_config.py  test_device.py  test_exceptions.py  test_ha_compat.py  test_har_integration.py  test_integration.py  test_models.py  test_parser_validation.py  test_simple.py
tests/fixtures/: har_test_data.json
tests/legacy/: README.md  test_config.py  test_device.py  test_exceptions.py
